# VistaMessagingService

./: .gitexternals  CMakeLists.txt  VmsConfig.h  VmsEndpointFactory.cpp  VmsEndpointFactory.h  VmsInPlaceMsgCodec.cpp  VmsInPlaceMsgCodec.h  VmsMsg.cpp  VmsMsg.h  VmsMsgCodec.cpp  VmsMsgCodec.h  VmsMsgFactory.cpp  VmsMsgFactory.h  VmsMsgHandler.cpp  VmsMsgHandler.h  VmsMsgReceiver.cpp  VmsMsgReceiver.h  VmsMsgReceptor.cpp  VmsMsgReceptor.h  VmsMsgSender.cpp  VmsMsgSender.h  VmsSerialMsgCodec.cpp  VmsSerialMsgCodec.h  VmsStringMsg.cpp  VmsStringMsg.h  _SourceFiles.cmake
VmsBase/: CMakeLists.txt  VmsAnswerRequestSocket.cpp  VmsAnswerRequestSocket.h  VmsBaseConfig.h  VmsMarshallingCodec.cpp  VmsMarshallingCodec.h  VmsMsgCodec.h  VmsReceiveSocket.cpp  VmsReceiveSocket.h  VmsSendRequestSocket.cpp  VmsSendRequestSocket.h  VmsSendSocket.cpp  VmsSendSocket.h  VmsSerializingCodec.h  VmsSocketCore.cpp  VmsSocketCore.h  VmsSocketCoreFactory.cpp  VmsSocketCoreFactory.h  VmsSocketDemux.cpp  VmsSocketDemux.h  VmsSocketFactory.cpp  VmsSocketFactory.h  VmsTypedReceiveSocket.h  VmsTypedSendSocket.h  VmsVocabulary.cpp  VmsVocabulary.h  _SourceFiles.cmake
VmsExamples/: CMakeLists.txt
VmsExamples/VmsSimpleIsoSurface/: CMakeLists.txt
VmsExamples/VmsSimpleIsoSurface/VmsSimpleIsoClient/: CMakeLists.txt  VmsSimpleIsoClient.cpp  VmsSimpleIsoClient.h  _SourceFiles.cmake  main.cpp
VmsExamples/VmsSimpleIsoSurface/VmsSimpleIsoClient/configfiles/: display_desktop.ini  display_picasso.ini  interaction_desktop.ini  interaction_picasso.ini  vista.ini  vista_cave.ini  vista_desktop.ini  vista_picasso.ini
VmsExamples/VmsSimpleIsoSurface/VmsSimpleIsoClient/configfiles/xml/: applicationcontext_flystick.xml  applicationcontext_mouse.xml  keyboard_standardinput.xml  mouse_trackball.xml  presenter.xml  spacenavigator_navigation.xml  ucp_cave.xml  ucp_picasso.xml  vfa_timing.xml  vfa_viewerupdate.xml
VmsExamples/VmsSimpleIsoSurface/VmsSimpleIsoServer/: CMakeLists.txt  VmsSimpleIsoServer.cpp  VmsSimpleIsoServer.h  _SourceFiles.cmake  main.cpp
VmsExamples/VmsSimpleIsoSurface/VmsSimpleIsoVocabulary/: CMakeLists.txt  RegisterSimpleIsoVoc.cpp  RegisterSimpleIsoVoc.h  RequestIsosurfaceMsg.cpp  RequestIsosurfaceMsg.h  SimpleIsoVocConfig.h  TerminateMsg.cpp  TerminateMsg.h  UpdatePolyDataMsg.cpp  UpdatePolyDataMsg.h  _SourceFiles.cmake
VmsTesting/: CMakeLists.txt  MsgCodecTest.cpp  RequestSocketTest.cpp  SendReceiveSocketTest.cpp  SocketCoreFactoryTest.cpp  SocketCoreTest.cpp  SocketDemuxTest.cpp  SocketFactoryTest.cpp  TestingUtils.h  TypedSendReceiveSocketTest.cpp  VocabularyTest.cpp
VmsZMQBindings/: CMakeLists.txt  VmsZMQConfig.h  VmsZMQSocketCore.cpp  VmsZMQSocketCore.h  VmsZMQSocketCoreFactory.cpp  VmsZMQSocketCoreFactory.h  VmsZMQSocketDemux.cpp  VmsZMQSocketDemux.h  _SourceFiles.cmake
documentation/: Doxyfile
tests/SimpleSenderReceiver/: CMakeLists.txt
tests/SimpleSenderReceiver/Receiver/: CMakeLists.txt  main.cpp
tests/SimpleSenderReceiver/Sender/: CMakeLists.txt  _SourceFiles.cmake  main.cpp
tests/VmsMsgEncoderTest/: CMakeLists.txt  main.cpp
